--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_bookmark">Bookmark</string>
     <string name="abt_app">About the App</string>
     <string name="ok">OK</string>
-    <string name="pers_names">Designed by Felix Chandran \n Developed by Anand S</string>
+    <string name="pers_names">Designed by Felix Chandran \n \n felixchandran1@gmail.com \n \n Developed by Anand S \n \n anandindiaa@gmail.com</string>
     <string name="develop">Developed for non-profit \n purpose only.</string>
     <string name="search">Search for article, author or publication date</string>
 </resources>
